ckad/networkpolicies/dummy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummynginx
  labels:
    app: dummynginx
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: content
      mountPath: "/usr/share/nginx/html"
  volumes:
  - name: content
    configMap:
      name: nginx-landing-page
